2003-05-05	Gaius Mulley <gaius@glam.ac.uk>

	* fixed two bugs reported by Iztok Kobal.
	* fixed bug in M2GCCDeclare.mod (BITSET's subrange was undeclared).
	* added BITNUM, the subrange from which BITSET is constructed, in SYSTEM.
	* added regression test case for this bug.
	* also modified c.lex to use xstrdup and not strdup.

2003-05-01	Gaius Mulley <gaius@glam.ac.uk>

	* added pseudo functions, CAP, ODD, ABS
	* removed gm2-libs/Math.def which defined ABS

2003-04-29	Gaius Mulley <gaius@glam.ac.uk>

	* examples/pthreads cleaned up
	* introduced ISO SYSTEM. Limitations, TSIZE only takes one parameter,
	  and SHIFT, ROTATE are not implemented yet
	* renamed gm2-libs/Strings to gm2-libs/DynamicStrings to avoid name
	  clash with gm2-iso/Strings
	* p2c modified to understand DEFINITION MODULE FOR "C"
	* gm2-libs/libc.def modified to use DEFINITION MODULE FOR "C"
	* gm2-iso/libc.def removed
	* linking references to libc (in gm2/init/*init) removed
	* gm2/tools-src/def2texi finished
	* gm2/gm2-libs.texi built via gm2/tools-src/def2texi
	* gm2/gm2.texi now contains library definition modules and index
	* added -Wiso switch to gm2 driver

2003-04-12	Gaius Mulley <gaius@glam.ac.uk>

	* first cut of h2def released
	* examples/pthreads introduced
	* examples/vga.def generated by h2def
	* fixed bug in CodeBecomes
	* fixed constant set bug in M2GenGCC.mod
	* updated gm2.texi to reflect introduction of h2def
	* build mechanism tidied up. p2c is now built from the top level
	  makefile.
	* some portability features of p2c fixed, so that it builds
	  cleanly under Apple Darwin
	* many internal changes made to ppg to handle recursive ebnf
	  rules.
	* fixed automatic export of unqualified identifiers from a
	  DEFINITION MODULE FOR "C"

2003-02-02	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by Iztok Kobal, the gm2-iso/ChanConsts module
	  failed to compile. Added a regression test to catch this.

2003-02-01	Gaius Mulley <gaius@glam.ac.uk>
