@@ -26,7 +26,7 @@ BEGIN
 END ALLOCATE ;
 
 
-PROCEDURE DEALLOCATE (a: ADDRESS; Size: CARDINAL);
+PROCEDURE DEALLOCATE (VAR a: ADDRESS; Size: CARDINAL);
 BEGIN
    SysStorage.DEALLOCATE(a, Size)
 END DEALLOCATE ;
