@@ -31,12 +31,11 @@ BEGIN
 END ALLOCATE ;
 
 
-
-PROCEDURE DEALLOCATE (a: ADDRESS; Size: CARDINAL);
+PROCEDURE DEALLOCATE (VAR a: ADDRESS; Size: CARDINAL);
 BEGIN
-   free(a)
+   free(a) ;
+   a := NIL
 END DEALLOCATE ;
-
 
 
 PROCEDURE Available (Size: CARDINAL) : BOOLEAN;
