@@ -32,6 +32,5 @@ choosetemp
 M2Version
 M2FileName
 M2LexBuf
-m2lex
 gm2m
 mod_init
